Navbar wrapping fix.

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ aside:last-of-type {
 }
 
 nav {
-    padding: 20px;
+    padding: 40px;
     grid-area: nav;
     background-color: white;
     display: flex;
@@ -117,6 +117,7 @@ nav #popup {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    padding: 20px;
 }
 
 #hungerDisplay,
